--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=126708b0fdc4ac
 MAIL_PASSWORD=e1b950e04bbaaf
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=maheshkgadri@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
